k8s/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: django-app
  ports:
    - name: http
      port: 80
      targetPort: http
